adding google verification

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
+    <meta name="google-site-verification" content="iN1kuaJ-LNSIPcyHthHqXVbR7uQ-ouSZZIni4F76uM8" />
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <script src="https://kit.fontawesome.com/8a6998a84c.js" crossorigin="anonymous"></script>
