--- a/src/app.html
+++ b/src/app.html
@@ -1,18 +1,35 @@
 <!doctype html>
 <html lang="en">
-	<head>
-    <meta name="google-site-verification" content="iN1kuaJ-LNSIPcyHthHqXVbR7uQ-ouSZZIni4F76uM8" />
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <script src="https://kit.fontawesome.com/8a6998a84c.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Work+Sans:400,600" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-    <title>Ayoosteo</title>
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+
+<head>
+  <meta name="google-site-verification" content="iN1kuaJ-LNSIPcyHthHqXVbR7uQ-ouSZZIni4F76uM8" />
+  <meta charset="utf-8" />
+  <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+  <script src="https://kit.fontawesome.com/8a6998a84c.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Work+Sans:400,600" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  %sveltekit.head%
+  <title>Ayoosteo</title>
+  <!-- MailerLite Universal -->
+  <script>
+    (function (w, d, e, u, f, l, n) {
+      w[f] = w[f] || function () {
+        (w[f].q = w[f].q || [])
+        .push(arguments);
+      }, l = d.createElement(e), l.async = 1, l.src = u,
+      n = d.getElementsByTagName(e)[0], n.parentNode.insertBefore(l, n);
+    })
+      (window, document, 'script', 'https://assets.mailerlite.com/js/universal.js', 'ml');
+    ml('account', '1416482');
+  </script>
+  <!-- End MailerLite Universal -->
+</head>
+
+<body data-sveltekit-preload-data="hover">
+  <div style="display: contents">%sveltekit.body%</div>
+  <button class="ml-onclick-form" onclick="ml('show', 'yHC5Af', true)">Click here to show form</button>
+</body>
+
 </html>
