--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto|Work+Sans:400,600" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   %sveltekit.head%
-  <title>Ayoosteo</title>
+  <meta name="description" content="London-based online health coach and osteopath supporting people with chronic illness, diabetes, migraines, low energy, and new health diagnoses.">
+  <title>Certified Health Coach in London | Ayoosteo</title>
   <!-- MailerLite Universal -->
   <script>
     (function (w, d, e, u, f, l, n) {
